--- a/about/index.html
+++ b/about/index.html
@@ -65,10 +65,10 @@
       <footer class="site-footer">
   <div class="container">
     <ul class="social">
-  <li><a href="http://github.com/nandomoreirame" target="_blank"><i class="icon icon-github"></i></a></li>
-  <li><a href="http://twitter.com/nandomoreirame" target="_blank"><i class="icon icon-twitter"></i></a></li>
-  <li><a href="http://facebook.com/fernando.dev" target="_blank"><i class="icon icon-facebook"></i></a></li>
-  <li><a href="http://linkedin.com/in/nandomoreirame" target="_blank"><i class="icon icon-linkedin"></i></a></li>
+  <li><a href="http://github.com/sdole" target="_blank"><i class="icon icon-github"></i></a></li>
+  <li><a href="http://twitter.com/sdoledotcom" target="_blank"><i class="icon icon-twitter"></i></a></li>
+  <!--<li><a href="http://facebook.com/fernando.dev" target="_blank"><i class="icon icon-facebook"></i></a></li>-->
+  <li><a href="http://www.linkedin.com/in/sdole" target="_blank"><i class="icon icon-linkedin"></i></a></li>
 </ul>
     <p class="txt-medium-gray">
       <small>&copy;2016 All rights reserved. Made with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> and ♥</small>
