--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="/images/author.jpg" alt="author thumb" class="dot">
         <h1>Genvega, Inc.</h1>
         <h3>We are the company behind <a href="http://www.tvarit.io"> <strong>Tvarit</strong></a> - a <em>Continuous Production Deployment</em> tool set for the Amazon Web Services platform.</h3>
-        <!--<h3>I'm <strong itemprop="name"></strong>, a <em itemprop="jobTitle">AWS Solutions Architect</em>.</h3>-->
+        <!--<h3>I'm <strong itemprop="name">Sachin Dole</strong>, a <em itemprop="jobTitle">AWS Solutions Architect</em>.</h3>-->
         <!--<h3>Genvega</h3>-->
         <h3>Genvega provides consulting and and training for the Amazon Web Service platform.</h3>
 
@@ -30,10 +30,10 @@
         <!--<a href="/blog" class="btn btn-ghost">blog</a>-->
 
         <ul class="social">
-  <li><a href="http://github.com/nandomoreirame" target="_blank"><i class="icon icon-github"></i></a></li>
-  <li><a href="http://twitter.com/nandomoreirame" target="_blank"><i class="icon icon-twitter"></i></a></li>
-  <li><a href="http://facebook.com/fernando.dev" target="_blank"><i class="icon icon-facebook"></i></a></li>
-  <li><a href="http://linkedin.com/in/nandomoreirame" target="_blank"><i class="icon icon-linkedin"></i></a></li>
+  <li><a href="http://github.com/sdole" target="_blank"><i class="icon icon-github"></i></a></li>
+  <li><a href="http://twitter.com/sdoledotcom" target="_blank"><i class="icon icon-twitter"></i></a></li>
+  <!--<li><a href="http://facebook.com/fernando.dev" target="_blank"><i class="icon icon-facebook"></i></a></li>-->
+  <li><a href="http://www.linkedin.com/in/sdole" target="_blank"><i class="icon icon-linkedin"></i></a></li>
 </ul>
 
     </div>
