--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="hero-inner container">
 
-        <img src="/images/LogoColorNoText.png" alt="author thumb" class="dot">
+        <img src="/images/LogoColorNoText120WideBorder.png" alt="author thumb" class="dot">
         <h1>Genvega, Inc.</h1>
         <h3>We are the company behind <a href="http://www.tvarit.io"> <strong>Tvarit</strong></a> - a <em>Continuous Production Deployment</em> tool set for the Amazon Web Services platform.</h3>
         <!--<h3>I'm <strong itemprop="name">Sachin Dole</strong>, a <em itemprop="jobTitle">AWS Solutions Architect</em>.</h3>-->
