disqus works certification announcement is almost complete.

--- a/resume/index.html
+++ b/resume/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Genvega, Inc. AWS Architect</title>
-    <meta name="description" content="A free Jekyll theme for download">
+    <title>Genvega, AWS Cloud Automation</title>
+    <meta name="description" content="Genvega, inc. is a AWS partner and solutions architecture company.">
 
     <link rel="stylesheet" href="/css/main.css">
     <link rel="canonical" href="http://www.genvega.com/resume/">
-    <link rel="alternate" type="application/rss+xml" title="Genvega, Inc. AWS Architect" href="http://www.genvega.com/feed.xml" />
+    <link rel="alternate" type="application/rss+xml" title="Genvega, AWS Cloud Automation" href="http://www.genvega.com/feed.xml" />
   </head>
 
   <body>
