--- a/about/index.html
+++ b/about/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>About</title>
-    <meta name="description" content="A free Jekyll theme for download">
+    <meta name="description" content="Genvega, inc. is a AWS partner and solutions architecture company.">
 
     <link rel="stylesheet" href="/css/main.css">
     <link rel="canonical" href="http://www.genvega.com/about/">
-    <link rel="alternate" type="application/rss+xml" title="Genvega, Inc. AWS Architect" href="http://www.genvega.com/feed.xml" />
+    <link rel="alternate" type="application/rss+xml" title="Genvega, AWS Cloud Automation" href="http://www.genvega.com/feed.xml" />
   </head>
 
   <body>
