--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
         <img src="/images/LogoColorNoText120WideBorder.png" alt="author thumb" class="dot">
         <h1>Genvega, Inc.</h1>
-        <h3>We are the company behind <a href="http://www.tvarit.io"> <strong>Tvarit</strong></a> - a <em>Continuous Production Deployment</em> tool set for the Amazon Web Services platform.</h3>
+        <h3>We are the company behind <a href="http://www.fastup.io"> <strong>FastUp</strong></a> - a <em>Continuous Production Deployment</em> tool set for the Amazon Web Services platform.</h3>
         <!--<h3>I'm <strong itemprop="name">Sachin Dole</strong>, a <em itemprop="jobTitle">AWS Solutions Architect</em>.</h3>-->
         <!--<h3>Genvega</h3>-->
         <h3>Genvega provides consulting and and training for the Amazon Web Service platform.</h3>
 
-        <a href="http://www.tvarit.io" class="btn btn-ghost">go to tvarit</a>
+        <a href="http://www.fastup.io" class="btn btn-ghost">go to FastUp</a>
         <!--<a href="/about" class="btn btn-ghost">go to tvarit</a>-->
         <a  href="/blog" class="btn btn-ghost">blog</a>
 
